# ORFanage

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  Cargo.toml  README.md  README.rst  main.cpp  orfanage.cpp  orfcompare.cpp  stats_main.cpp
docs/: conf.py  index.rst
docs/content/csvs/: attributes.csv  gtf.csv  gtf.t.csv  orfcompare_stats.csv  stats.csv  stats.t.csv
docs/user/: contact.rst  examples.rst  file_formats.rst  install.rst  orfanage.rst  orfcompare.rst  quickstart.rst
example/: mane.test000001.gtf  mane.test000002.gtf  patl.chess3.gtf  patl.gencode.gtf  query.gtf  refseq.test000001.gtf  refseq.test000002.gtf  template.gtf
src/: Transcriptome.cpp  Transcriptome.h  aln.hpp  arg_parse.hpp  common.hpp  gff_utils.cpp  gff_utils.h  main.rs  segtp.rs  transcript.rs  treader.rs
